test/scc/type/semantic-errors/005.t
union
{
    int a;
    int b[0];
};